--- a/日期选择器/DatePicker.html
+++ b/日期选择器/DatePicker.html
@@ -20,7 +20,7 @@
 		</style>
 	</head>
 	<body>
-		<input type="text" class="datepicker" />
+		<input style="margin-left: 200px;" type="text" class="datepicker" />
 		<!--<div class="ui-datepicker-wrapper"></div>-->
 		<script type="text/javascript" src="data.js" ></script>
 		<script type="text/javascript" src="main.js" ></script>
