--- a/上传图片预览/yulan.html
+++ b/上传图片预览/yulan.html
@@ -7,6 +7,20 @@
 	<body>
 		<img id="imgPre" src="img/head.jpg" />
 		<input onchange="preImg(this.id,'imgPre');"  name="imgOne" id="imgOne" type="file"  />
+		
+		<input onchange="upload(this,this.files)" type="file" />
+		
+		
+		
+		<p>  
+		    <label>请选择一个文件：</label>  
+		    <input type="file" id="imagefile" />  
+		    <input type="button" value="读取图像" onClick="readAsDataURL();" />  
+		</p>  
+		<div name="result" id="result">  
+		    <!-- 这里用来显示图片结果-->  
+		</div>  
+
 		<script>
 			function getFileUrl(sourceId) { 
 				var url; 
@@ -29,6 +43,38 @@
 				var imgPre = document.getElementById(targetId); 
 				imgPre.src = url; 
 			} 
+			
+			
+			function upload(t,f){			     
+			    var str = "";
+			    //var uppic = $(t).parent().siblings(".uppic");
+		        var reader = new FileReader();
+		        reader.readAsDataURL(f[0]);
+		        reader.onload = function(e){
+		            str+="<img src='"+e.target.result+"'/>";
+		            //uppic.html(str);
+		        }
+			}
 		</script>
+		<script type="text/javascript">  
+			function readAsDataURL(){  
+			    if(typeof FileReader=='undifined'){          //判断浏览器是否支持filereader  
+			        result.innerHTML="<p>抱歉，你的浏览器不支持 FileReader</p>";  
+			        return false;  
+			    }  
+			    var file=document.getElementById("imagefile").files[0];  
+			    console.log(file)
+			    if(!/image\/\w+/.test(file.type)){           //判断获取的是否为图片文件  
+			        alert("请确保文件为图像文件");  
+			        return false;  
+			    }  
+			    var reader=new FileReader();  
+			    reader.readAsDataURL(file);  
+			    reader.onload=function(e){
+			        var result=document.getElementById("result");  
+			        result.innerHTML='<img src="'+this.result+'" alt=""/>'  
+			    }     
+			}  
+		</script>  
 	</body>
 </html>
